# guide-me

./: .env  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/agents/: booking_engine.py  data_cleaner.py  gemini_searcher.py  orchestrator.py  providers.py  reviewer.py
backend/api/: chat_router.py
backend/core/: config.py  database.py  schemas.py
backend/scrapers/: html_compressor.py  scrapling_engine.py
data/chromadb/: chroma.sqlite3
frontend/: app.py
frontend/components/: property_card.py
