[project]
name = "travel-agent-bot"
version = "0.1.0"
description = "Agentic AI Travel Recommendation Platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.2.0",
    "scrapling>=0.2.9",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "streamlit>=1.36.0",
    "streamlit-lottie>=0.0.5",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "curl-cffi>=0.15.0",
    "google-genai>=2.8.0",
    "playwright>=1.60.0",
    "browserforge>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
